--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div class="about-me-container"> 
             <!--- about me info --->
               <div class="info-conteiner">
-                  <h2 class="profession">Front-End Developer</h2>
+                  <h2 class="profession">Junior Front-End Developer</h2>
                   <h1 class="name">Ravshan Mahmudov</h1>
               
                   <p class="description"> Hello, I am looking for a new career opportunity and would appreciate your support. 
