--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             <!--- education container --->
               <div>
                 <h3 class="about-me-title">Education</h3>
-                    <p class="company">Kharkov Aviation Institute</p>
+                    <p class="company">The National Aerospace University (“KhAI” Kharkov Aviation Institute)</p>
                     <p class="education-title">Faculty of aircraft-helicopter building </p>
                     <p class="education-degree">M.A degree  Major: Engineer; Minor: Automation design system</p>
                     <span class="profession-time">
