--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My resume</title>
     <link rel="stylesheet" href="./css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-</head>
-<body>
+    </head>
+    <body>
     <!--- main container --->
     <div class="wrapper"> 
         <aside class="sidebar">
@@ -96,42 +96,44 @@
                 <h3 class="about-me-title">Work Experience</h3>
                    
                     <!---company 1-->
-                    <!-- <div>
+                    <div>
                     <h4 class="profession-title">Front-End Developer <span class="company">Freelance</span> </h4>
                         <span class="profession-time">
-                        September 2020 - up to now <span class="divaider">|</span>  Ukraine
+                        May 2020 - up to now <span class="divaider">|</span>  Ukraine
                         </span>
                     <ul class="profession-duties">
                             <li class="profession-duties-item">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
+                            Development and creation of web applications (sites) of simple and medium complexity according to the finished design</li>
                             <li class="profession-duties-item">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
+                            Website administration</li>
                             <li class="profession-duties-item">
-                            Risus commodo viverra maecenas.</li>
+                            Optimization, updating and making changes to outdated sites</li>
                             <li class="profession-duties-item">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod. </li>
+                            Transferring sites to a new hosting </li>
                     </ul>
-                    </div> -->
+                    </div>
                     <!---company 2-->
                     <div>
                     <h4 class="profession-title">Editor, content-manager <span class="company">GO RNSU</span>  </h4>
                        <span class="profession-time"> 
-                        March 2017 - up to now  <span class="divaider">|</span> Ukraine
+                        March 2017 - April 2021  <span class="divaider">|</span> Ukraine
                        </span>
                        <ul class="profession-duties">
                             <li class="profession-duties-item">
                             site moderation (http://radaspilnot.org.ua/)</li>
                             <li class="profession-duties-item">
+                            shooting (photo, video) and further coverage of events held by RNSU</li>  
+                            <li class="profession-duties-item">
                             posting news</li>
                             <li class="profession-duties-item">
-                            making the necessary changes to the site structure, adding new sections, menus, etc.</li>
+                            making the necessary changes to the site structure, removing unnecessary and adding new sections, menus, etc.</li>
                        </ul>
                     </div>
                     <!---company 3-->
                     <div>
                     <h4 class="profession-title">Advertising Director, Theater Administrator <span class="company">"Real Art Production"</span>   </h4>
                         <span class="profession-time">
-                            June 2012 - February 2013 <span class="divaider">|</span> Ukraine
+                            June 2012 - May 2014 <span class="divaider">|</span> Ukraine
                         </span>
                         <ul class="profession-duties">
                             <li class="profession-duties-item">
@@ -158,6 +160,5 @@
         </div>
 
     <div
-
-</body>
+    </body>
 </html>
