--- a/index.html
+++ b/index.html
@@ -131,6 +131,23 @@
                     </div>
                     <!---company 3-->
                     <div>
+                    <h4 class="profession-title">Head of Information Support Department<span class="company">TM "Zhittedar"</span></h4>
+                        <span class="profession-time">
+                            May 2014 - Septermber 2017 <span class="divaider">|</span> Ukraine
+                        </span>
+                        <ul class="profession-duties">
+                            <li class="profession-duties-item">
+                            • Planning, creation, maintenance and analysis of advertising campaigns and performance indicators (Google Analytics, Google Adwords, Yandex.Direct, Yandex.Metrica)</li>
+                            <li class="profession-duties-item">
+                            • SMM (Facebook, VK, Instagram, YouTube) - content and setting up advertising campaigns; work with forums</li>
+                            <li class="profession-duties-item">
+                            • e-mail marketing (segmentation, targeting, working with databases, A / B testing)</li>
+                            <li class="profession-duties-item">
+                            • administration and modernization of the site (CMS Joomla)</li>
+                        </ul>
+                    </div>
+                    <!---company 4-->
+                    <div>
                     <h4 class="profession-title">Advertising Director, Theater Administrator <span class="company">"Real Art Production"</span>   </h4>
                         <span class="profession-time">
                             June 2012 - May 2014 <span class="divaider">|</span> Ukraine
