--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <div>
                     <img src="./img/linkedin.png" alt="linkedin icon" class="contacts-icon">
                     <a class="contacts-link"
-                        href="www.linkedin.com/in/ravshanmahmudov">LinkedIn</a>
+                        href="https://linkedin.com/in/ravshanmahmudov">LinkedIn</a>
                 </div>
                 <div>
                     <img src="./img/github.png" alt="Github icon" class="contacts-icon">
